@@ -75,6 +75,7 @@ zztong_car_show_01,POI,POI,,x,Car Show,,,,,,,,,,,,,,
 zztong_car_wash_01,POI,POI,,x,Kwik Kleen Car Wash,,,,,,,,,,,,,,
 zztong_cave_01,POI,POI,,x,Spelunking Adventures,,,,,,,,,,,,,,
 zztong_cement_plant_01,POI,POI,,x,Cement Plant,,,,,,,,,,,,,,
+zztong_cheerdancegym_01,POI,POI,,x,Navezgane Gymnastics,,,,,,,,,,,,,,
 zztong_containers_01,POI,POI,,x,Containers,,,,,,,,,,,,,,
 zztong_crater_01,POI,POI,,x,Crater,,,,,,,,,,,,,,
 zztong_delos_oldwest_01,POI,POI,,x,Delos Hotel,,,,,,,,,,,,,,
